Signature and buttons.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="wrapper">
       <div class="box">
         <header>
-          <h1>NANO</h1>
+          <h1>NANO.</h1>
           <h2>Beautiful websites for creatives.</h2>
           </header>
         <section>
@@ -23,12 +23,12 @@
       </div>
       <footer class="box">
           <ul class="links">
-            <li><a href="#">Facebook</a></li>
-            <li><a href="http://twitter.com/rodrigotellom">Twitter</a></li>
-            <li><a href="#">Instagram</a></li>
+            <li><a href="#" class="main-button">Create my website</a></li>
+            <li><a href="#" class="button">View example</a></li>
             <li><a href="http://ideas.rodrigotello.me">Blog</a></li>
             <li><a href="mailto:rodrigotello@outlook.com">Email</a></li>
           </ul>
+          <p class="signature">NANO © 2015</p>
       </footer>
     </div>
   </body>
