--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Rodrigo Tello</title>
+    <title>Nano. Beautiful websites for creatives.</title>
     <link rel="stylesheet" href="stylesheets/styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <!--[if lt IE 9]>
@@ -27,8 +27,9 @@
             <li><a href="#" class="button">View example</a></li>
             <li><a href="http://ideas.rodrigotello.me">Blog</a></li>
             <li><a href="mailto:rodrigotello@outlook.com">Email</a></li>
+            <li><p class="signature">NANO © 2015</p></li>
           </ul>
-          <p class="signature">NANO © 2015</p>
+          
       </footer>
     </div>
   </body>
