--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <li><a href="#" class="button">View example</a></li>
             <li><a href="http://ideas.rodrigotello.me">Blog</a></li>
             <li><a href="mailto:rodrigotello@outlook.com">Email</a></li>
-            <li><p class="signature">NANO © 2015</p></li>
+            <li><p class="signature">Nano © 2015</p></li>
           </ul>
           
       </footer>
