--- a/index.html
+++ b/index.html
@@ -23,13 +23,12 @@
       </div>
       <footer class="box">
           <ul class="links">
-            <li><a href="#" class="main-button">Create my website</a></li>
-            <li><a href="#" class="button">View example</a></li>
+            <li class="button-fixer"><a href="#" class="main-button">Create my website</a></li>
+            <li class="button-fixer"><a href="#" class="button">View example</a></li>
             <li><a href="http://ideas.rodrigotello.me">Blog</a></li>
             <li><a href="mailto:rodrigotello@outlook.com">Email</a></li>
             <li><p class="signature">Nano © 2015</p></li>
           </ul>
-          
       </footer>
     </div>
   </body>
