--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
       <footer class="box">
           <ul class="links">
             <li class="button-fixer"><a href="#" class="main-button">Create my website</a></li>
-            <li class="button-fixer"><a href="#" class="button">View example</a></li>
-            <li><a href="http://ideas.rodrigotello.me">Blog</a></li>
+            <li class="button-fixer"><a href="http://rodrigotello.me" class="button">View example</a></li>
+            <li><a href="#">About</a></li>
             <li><a href="mailto:rodrigotello@outlook.com">Email</a></li>
-            <li><p class="signature">Nano © 2015</p></li>
+            <li><p class="signature">Nano © 2015 by <a href="http://rodrigotello.me">Rodrigo Tello</p></li>
           </ul>
       </footer>
     </div>
