--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <h2>Beautiful websites for creatives.</h2>
           </header>
         <section>
-          <p>Nano is a simple and beautiful tool for creative professionals to make their website. No coding, no extra-fees, no plug-ins. One simple beautiful theme. Your name, your information, your information, on the web.</p>
+          <p>Nano is a simple and beautiful tool for creatives and professionals to make their website. No coding, no configurations, no plug-ins. One simple beautiful theme. Just $49 per year. Your Dot.com. Your space on the web.</p>
         </section>
       </div>
       <footer class="box">
