--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       </div>
       <footer class="box">
           <ul class="links">
-            <li class="button-fixer"><a href="#" class="main-button">Create my website</a></li>
+            <li class="button-fixer"><a href="mailto:rodrigotello@outlook.com" class="main-button">Create my website</a></li>
             <li class="button-fixer"><a href="http://rodrigotello.me" class="button">View example</a></li>
             <li><a href="#">About</a></li>
             <li><a href="mailto:rodrigotello@outlook.com">Email</a></li>
