Changing the name.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Nano. Beautiful websites for creatives.</title>
+    <title>Nanno. Beautiful websites for creatives.</title>
     <link rel="stylesheet" href="stylesheets/styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <!--[if lt IE 9]>
@@ -14,11 +14,11 @@
     <div class="wrapper">
       <div class="box">
         <header>
-          <h1>NANO.</h1>
+          <h1>NANNO.</h1>
           <h2>Beautiful websites for creatives.</h2>
           </header>
         <section>
-          <p>Nano is a simple and beautiful tool for creatives and professionals to make their website. No coding, no configurations, no plug-ins. One simple beautiful theme. Just $49 per year.</p>
+          <p>Nanno is a simple and beautiful tool for creatives and professionals to make their website. No coding, no configurations, no plug-ins. One simple beautiful theme. Just $49 per year.</p>
         </section>
       </div>
       <footer class="box">
