--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <li class="button-fixer"><a href="http://rodrigotello.me" class="button">View example</a></li>
             <li><a href="#">About</a></li>
             <li><a href="mailto:rodrigotello@outlook.com">Email</a></li>
-            <li><p class="signature">Nano © 2015 by <a href="http://rodrigotello.me">Rodrigo Tello</p></li>
+            <li><p class="signature">Nanno © 2015 by <a href="http://rodrigotello.me">Rodrigo Tello</p></li>
           </ul>
       </footer>
     </div>
