--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <footer class="box">
           <ul class="links">
             <li class="button-fixer"><a href="mailto:rodrigotello@outlook.com" class="main-button">Create my website</a></li>
-            <li class="button-fixer"><a href="http://rodrigotello.me" class="button">View example</a></li>
+            <li class="button-fixer"><a href="http://nannodemo.rodrigotello.me" class="button">View example</a></li>
             <li><a href="#">About</a></li>
             <li><a href="mailto:rodrigotello@outlook.com">Email</a></li>
             <li><p class="signature">Nanno © 2015 by <a href="http://rodrigotello.me">Rodrigo Tello</p></li>
